[package]
name = "fsdb"
version = "0.1.2"
edition = "2021"
authors = ["evanfeenstra <evanfeenstra@gmail.com>"]
description = "filesystem database"
repository = "https://github.com/Evanfeenstra/fsdb"
license = "MIT"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
rmp-serde = "1.1.0"
thiserror = "1.0.31"